fixed little bugs

--- a/basics/templates/basics/map_claim.html
+++ b/basics/templates/basics/map_claim.html
@@ -130,7 +130,7 @@
                                         <div class="col-sm-10 col-sm-offset-1" style="margin-top: 15px; margin-bottom: 15px;">
                                             <h4><span style="font-weight: bold">1.</span> Name for your claim:</h4>
                                             <div class="form-group">
-                              					<input type="text" class="form-control input-lg" placeholder="Name for Claim" id="claimname" name="claimname" maxlength="30" required/>
+                              					<input type="text" class="form-control input-lg" placeholder="Name for claim" id="claimname" name="claimname" maxlength="30" required/>
                               				</div>
                                             <h4><span style="font-weight: bold">2.</span> Draw your polygon!</h4>
                                             <div class="row">
@@ -188,7 +188,7 @@
                     </div>
 
                     <!-- needs and information tabs -->
-                    <div class="col-sm-12" style="margin-bottom: 15px;">
+                    <div class="col-sm-12" style="margin-bottom: 15px; margin-top: 15px;">
                         <div class="col-sm-12" id="nav-pills-outer">
                             <ul class="nav nav-pills nav-justified">
                                 <li class="active"><a href="#tab-needs" data-toggle="tab"><h4 style="font-weight:bold;">Needs</h4></a></li>
