finished priority functions, delete comments in information_view

--- a/basics/templates/basics/information_view.html
+++ b/basics/templates/basics/information_view.html
@@ -54,7 +54,7 @@
                                                 <div class="col-sm-9" id="comment-meta-data">
                                                     <p><i>from {{ comment.date }}{% if comment.group %} by <a id="green-link" href="{% url 'basics:group_detail_for_user' name=comment.group.name %}">{{ comment.group.name }}</a>{% elif comment.author == user %} by <span>you</span>{% endif %}</i></p>
                                                 </div>
-                                                <a class="list-group-footer-button" type="button" href="">
+                                                <a class="list-group-footer-button" type="button" href="{% url 'basics:information_delete_comment' pk_inf=information.pk pk_comm=comment.pk %}">
                                                     <div class="col-sm-3">
                                                         <span class="glyphicon glyphicon-remove"></span> Delete
                                                     </div>
