--- a/basics/templates/snippets/info_filter.html
+++ b/basics/templates/snippets/info_filter.html
@@ -8,7 +8,7 @@
                             <a href="{% url 'basics:information_view' pk=info.id %}">
                                 <div class="col-sm-12">
                                     <h4 class="list-group-item-heading" style="color: #333; hover.color: #333;">{{ info.headline }}</h4>
-                                    <p class="list-group-item-text" style="color: #555; hover.color: #555;">{{ info|get_short_text:160 }}</p>
+                                    <p class="list-group-item-text" style="color: #555; hover.color: #555; word-wrap: break-word;">{{ info|get_short_text:160 }}</p>
                                 </div>
 
                                 <div class="col-sm-9">
