--- a/basics/templates/basics/actofgoods_startpage.html
+++ b/basics/templates/basics/actofgoods_startpage.html
@@ -85,7 +85,7 @@
     						{% endfor %}
 						{% endif %}
 		  				<div class="form-group">
-		  					<input type="email" class="form-control input-lg" placeholder="Email" name="email" required/>
+		  					<input type="email" class="form-control input-lg" placeholder="Email" name="email" maxlength="255" required/>
 		  				</div>
 
 						{% if messages %}
