--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -173,7 +173,7 @@
 													{% endif %}
 													<div class="form-group">
 														<label class="sr-only" for="InputEmail">Email</label>
-														<input type="text" class="form-control input-lg" name="email" placeholder="Email" required>
+														<input type="text" class="form-control input-lg" name="email" placeholder="Email" maxlength="255" required>
 													</div>
 													<div class="form-group">
 														<label class="sr-only" for="InputPassword">Password</label>
