--- a/basics/templates/basics/needs_all.html
+++ b/basics/templates/basics/needs_all.html
@@ -33,7 +33,7 @@
                             <div class="col-sm-6" style="margin-bottom: 15px;">
                                 <div class="input-group">
                                     <span class="input-group-addon">Range:</span>
-                                    <input type="text" class="form-control" id="range" name="range" value="{{range}}" aria-describedby="basic-addon3"></input>
+                                    <input type="text" class="form-control" id="range" name="range" value="{{range}}" aria-describedby="basic-addon3" maxlength="5"></input>
                                     <span class="input-group-addon">km</span>
                                 </div>
                             </div>
