--- a/basics/templates/basics/profil_edit.html
+++ b/basics/templates/basics/profil_edit.html
@@ -17,7 +17,7 @@
 
 					<div class="form-group">
 						<p style="font-size:130%;"> E-Mail </p>
-						<input type="description" class="form-control input-lg" value= {{ user.email }} name="email"  >
+						<input type="description" class="form-control input-lg" value= {{ user.email }} name="email" maxlength="255" >
 					</div>
 
 					<div class="form-group">
@@ -31,7 +31,7 @@
 
 					<div class="form-group">
 						<p style="font-size:130%;"> Range in km </p>
-						<input type="description" class="form-control input-lg" value= {{ userdata.aux }} name="aux"  >
+						<input type="description" class="form-control input-lg" value= {{ userdata.aux }} name="aux" maxlength="5" >
 					</div>
 
 					<div class="form-group">
