--- a/basics/templates/basics/information_view.html
+++ b/basics/templates/basics/information_view.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="modal-body">
-            <p>{{ information.text | linebreaksbr }}</p>
+            <p style="word-wrap: break-word;">{{ information.text | linebreaksbr }}</p>
             <h5><i>Location:</i></h5>
             <div id="map-container" style="height: 450px; margin-top: 15px; margin-bottom: 20px;"></div>
             <div class="list-group">
@@ -31,7 +31,7 @@
                             <div class="row">
                                 <div class="col-sm-12">
                                     <div class="list-group-item cursor-pointer" id="standard-list-group-item-div" data-toggle="modal" data-target=".{{ comment.id }}">
-                                        <p class="list-group-item-text">{{ comment|get_short_text:1024|linebreaksbr }}</p>
+                                        <p class="list-group-item-text" style="word-wrap: break-word;">{{ comment|get_short_text:1024|linebreaksbr }}</p>
                                     </div>
                                     <div class="list-group-footer" style="margin-bottom: 15px;">
                                         <div class="row">
@@ -78,7 +78,7 @@
                                         </div>
                                         <div class="modal-body">
                                             <h5><i>Comment from {{ comment.date }}{% if comment.group %} by <a id="green-link" href="{% url 'basics:group_detail_for_user' name=comment.group.name %}">{{ comment.group.name }}</a>{% elif comment.author == user %} by <span>you</span>{% endif %}:</i></h5>
-                                            <p>{{ comment.text|linebreaksbr }}</p>
+                                            <p style="word-wrap: break-word;">{{ comment.text|linebreaksbr }}</p>
                                         </div>
                                         <div class="modal-footer">
                                             <button id="standard-grey-button-light" type="button" class="btn btn-primary" data-dismiss="modal" style="margin-bottom: 10px;">Close</button>
