--- a/basics/templates/basics/information_update.html
+++ b/basics/templates/basics/information_update.html
@@ -12,7 +12,7 @@
 				  {% csrf_token %}
           <p class="text-center">{{information.text}}<\p>
     			<div class="form-group">
-					    <input type="description" class="form-control input-lg" placeholder= "headline" value="{{need.headline}}" name="desc"  >
+					    <input type="additional text" class="form-control input-lg" placeholder= "headline" value="{{need.headline}}" name="text"  >
 					</div>
 
 					<div class="form-group">
